feat: added two columns template

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+<div class="wrapper">
+    <main>
+        <div class="content">
+            <div class="blue-block content-item">
+                <h2>Alena</h2>
+            </div>
+            <div class="sky-block content-item">7567576567546</div>
+        </div>
+    </main>
+
+</div>
+
 
 <body>
 
