feat: added code example and education

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
                         <li><b>Address:</b> Minsk, Belarus</li>
                     </ul>
                 </div>
+                <div class="code-example">
+                    <h3>Code Example:</h3>
+                    <pre><code>
+                            const getSum = (array) => {
+                                let sum = 0;
+                                for(let i = 0; i < array.length; i++) {
+                                    sum += array[i]
+                                }
+                                return sum;
+                            }
+                            const result = getSum([1,7,120,32,58,23,17]);
+                            allert(result);
+                        </code></pre>
+                </div>
             </div>
             <div class="sky-block content-item">
                 <h2>Ziaziulchyk</h2>
@@ -47,6 +61,18 @@
                             <li>Adobe Photoshop</li>
                             <li>Figma</li>
                         </ul>
+                    </div>
+                    <div>
+                        <h3>Project</h3>
+                        <a class="link-my-project" href="https://alenazezyulchik.github.io/rsschool-cv/cv">My first project</a>
+                    </div>
+                    <div>
+                        <h3>Education:</h3>
+                        <p>Belarusian State Economic University (2010-2014). Faculty of Economics and Trade Management</p>
+                    </div>
+                    <div>
+                        <h3>Language:</h3>
+                        <p>A1+</p>
                     </div>
                 </div>
             </div>
