--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<div class="wrapper">
-    <header>
-        <p>CV#3</p>
-    </header>
-    <main>
-        <div class="content">
-            <div class="blue-block content-item">
-                <h1>Alena</h1>
-                <div class="my-photo">
-                </div>
-                <div class="contacts">
-                    <ul>
-                        <li><b>Viber:</b> +375 29 274 31 92</li>
-                        <li><b>E-mail:</b> alen4ik2743192@gmail.com</li>
-                        <li><b>Address:</b> Minsk, Belarus</li>
-                    </ul>
-                </div>
-                <div class="code-example">
-                    <h3>Code Example:</h3>
-                    <pre><code>
+
+<body>
+    <div class="wrapper">
+        <header>
+            <p>CV#3</p>
+        </header>
+        <main>
+            <div class="content">
+                <div class="green-block content-item">
+                    <h1>Alena</h1>
+                    <div class="my-photo">
+                    </div>
+                    <div class="contacts">
+                        <ul>
+                            <li><b>Viber:</b> +375 29 274 31 92</li>
+                            <li><b>E-mail:</b> alen4ik2743192@gmail.com</li>
+                            <li><b>Address:</b> Minsk, Belarus</li>
+                        </ul>
+                    </div>
+                    <div class="code-example">
+                        <h3>Code Example:</h3>
+                        <pre><code>
                             const getSum = (array) => {
                                 let sum = 0;
                                 for(let i = 0; i < array.length; i++) {
@@ -38,59 +40,54 @@
                             const result = getSum([1,7,120,32,58,23,17]);
                             allert(result);
                         </code></pre>
-                </div>
-            </div>
-            <div class="sky-block content-item">
-                <h2>Ziaziulchyk</h2>
-                <div>
-                    <h3>About Myself:</h3>
-                    <div class="about-myself">
-                        <p>I graduated from the Belarusian State Economic University. For the last 10 years of my life I have been working in the trade. Now I am in a managerial position in one of the stores of a large retail chain. I don’t like my job.
-                            It does not bring pleasure, it takes a lot of strength and energy. I want to become a front-end developer at EPAM. My strengths are perseverance, perseverance, ability to multitask, self-confidence and a desire to go all the
-                            way. I believe these qualities will help me successfully complete my training and become part of the EPAM team. Programming languages: Java script, HTML, CSS. Version control systems: git. Development tools: VS code.</p>
-                    </div>
-                    <div class="skills">
-                        <h3>Skills and Proficiency:</h3>
-                        <ul class="skills">
-                            <li>HTML5</li>
-                            <li>CSS</li>
-                            <li>Git</li>
-                            <li>GitHub</li>
-                            <li>JavaScript Basics</li>
-                            <li>VS Code</li>
-                            <li>Adobe Photoshop</li>
-                            <li>Figma</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h3>Project</h3>
-                        <a class="link-my-project" href="https://alenazezyulchik.github.io/rsschool-cv/cv">My first project</a>
-                    </div>
-                    <div>
-                        <h3>Education:</h3>
-                        <p>Belarusian State Economic University (2010-2014). Faculty of Economics and Trade Management</p>
-                    </div>
-                    <div>
-                        <h3>Language:</h3>
-                        <p>A1+</p>
                     </div>
                 </div>
+                <div class="purple-block content-item">
+                    <h2>Ziaziulchyk</h2>
+                    <div>
+                        <h3>About Myself:</h3>
+                        <div class="about-myself">
+                            <p>I graduated from the Belarusian State Economic University. For the last 10 years of my life I have been working in the trade. Now I am in a managerial position in one of the stores of a large retail chain. I don’t like my job.
+                                It does not bring pleasure, it takes a lot of strength and energy. I want to become a front-end developer at EPAM. My strengths are perseverance, perseverance, ability to multitask, self-confidence and a desire to go all
+                                the way. I believe these qualities will help me successfully complete my training and become part of the EPAM team. Programming languages: Java script, HTML, CSS. Version control systems: git. Development tools: VS code.</p>
+                        </div>
+                        <div class="skills">
+                            <h3>Skills and Proficiency:</h3>
+                            <ul class="skills">
+                                <li>HTML5</li>
+                                <li>CSS</li>
+                                <li>Git</li>
+                                <li>GitHub</li>
+                                <li>JavaScript Basics</li>
+                                <li>VS Code</li>
+                                <li>Adobe Photoshop</li>
+                                <li>Figma</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3>Project</h3>
+                            <a class="link-my-project" href="https://alenazezyulchik.github.io/rsschool-cv/cv">My first project</a>
+                        </div>
+                        <div>
+                            <h3>Education:</h3>
+                            <p>Belarusian State Economic University (2010-2014). Faculty of Economics and Trade Management</p>
+                        </div>
+                        <div>
+                            <h3>Language:</h3>
+                            <p>A1+</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </main>
-    <footer>
-        <p>
-            <a href="https://github.com/AlenaZezyulchik">Github</a> 2021 <img class="rs" src="https://events.dev.by/ckeditor_assets/pictures/39473/content_rs_school_js.jpg" alt="">
-            <a href="https://rs.school/js/">Java Script</a>
-        </p>
+        </main>
+        <footer>
+            <p>
+                <a href="https://github.com/AlenaZezyulchik">Github</a> 2021 <img class="rs" src="https://events.dev.by/ckeditor_assets/pictures/39473/content_rs_school_js.jpg" alt="">
+                <a href="https://rs.school/js/">Java Script</a>
+            </p>
 
-    </footer>
-
-</div>
-
-
-<body>
-
+        </footer>
+    </div>
 </body>
 
 </html>
