--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <pre><code>
                             const getSum = (array) => {
                                 let sum = 0;
-                                for(let i = 0; i < array.length; i++) {
+                                for(let i = 0; i &lt array.length; i++) {
                                     sum += array[i]
                                 }
                                 return sum;
