feat: added section hero

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Merriweather:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -53,6 +56,18 @@
         </header>
         <main>
             <section class="hero">
+                <div class="name-photographer">
+                    <div>
+                        <h1>Alexa Rise</h1>
+                    </div>
+                    <div class="sub-title">
+                        Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
+                    </div>
+                    <div class="wrapper-button-hire">
+                        <input type="button" value="Hire me">
+
+                    </div>
+                </div>
 
             </section>
         </main>
