feat: added section Skills

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -70,6 +70,72 @@
                 </div>
 
             </section>
+            <section class="skills">
+                <div class="line-skill-line">
+                    <hr>
+                    <div>
+                        <h2>Skills</h2>
+                    </div>
+                    <hr>
+                </div>
+                <div class="skills-items">
+                    <div class="digital-photography">
+                        <div>
+                            <img src="./images/icon_camera.svg" alt="camera">
+                        </div>
+                        <div class="skills-title">
+                            <h3>Digital photography</h3>
+                        </div>
+                        <div class="skills-subtitle">
+                            High-quality photos in the studio and on the nature
+                        </div>
+                    </div>
+                    <div class="video-shothing">
+                        <div>
+                            <img src="./images/icon_video.svg" alt="video">
+                        </div>
+                        <div class="skills-title">
+                            <h3>
+                                <h3>Video shooting</h3>
+                            </h3>
+                        </div>
+                        <div class="skills-subtitle">
+                            Capture your moments so that they always stay with you
+                        </div>
+                    </div>
+                    <div class="retouch">
+                        <div>
+                            <img src="./images/icon_retouch.svg" alt="retouch">
+                        </div>
+                        <div class="skills-title">
+                            <h3>Retouch</h3>
+                        </div>
+                        <div class="skills-subtitle">
+                            I strive to make photography surpass reality
+                        </div>
+                    </div>
+                    <div class="audio">
+                        <div>
+                            <img src="./images/icon_mic.svg" alt="audio">
+                        </div>
+                        <div class="skills-title">
+                            <h3>Audio</h3>
+                        </div>
+                        <div class="skills-subtitle">
+                            Professional sounds recording for video, advertising, portfolio
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio">
+                <div class="line-portfolio-line">
+                    <hr>
+                    <div>
+                        <h2>Portfolio</h2>
+                    </div>
+                    <hr>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </div>
