feat: added sections Portfolio and Video

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -65,7 +65,6 @@
                     </div>
                     <div class="wrapper-button-hire">
                         <input type="button" value="Hire me">
-
                     </div>
                 </div>
 
@@ -134,6 +133,90 @@
                         <h2>Portfolio</h2>
                     </div>
                     <hr>
+                </div>
+                <div class="portfolio-buttons">
+                    <div class="season button-winter">
+                        <button>Winter</button>
+                    </div>
+                    <div class="season button-spring">
+                        <button>Spring</button>
+                    </div>
+                    <div class="season button-summer">
+                        <button>Sammer</button>
+                    </div>
+                    <div class="season button-autumn">
+                        <button>Autumn</button>
+                    </div>
+                </div>
+                <div class="portfolio-items">
+                    <div>
+                        <img src="./images/portfolio-img1.jpg" alt="img">
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-img2.jpg" alt="img">
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-img3.jpg" alt="img">
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-img4.jpg" alt="img">
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-img5.jpg" alt="img">
+                    </div>
+                    <div>
+                        <img src="./images/portfolio-img6.jpg" alt="img">
+                    </div>
+                </div>
+            </section>
+            <section class="video">
+                <div class="line-video-line">
+                    <hr>
+                    <div>
+                        <h2>Video</h2>
+                    </div>
+                    <hr>
+                </div>
+                <div class="video-player">
+                    <img src="./images/video-player.jpg" alt="video">
+                    <div class="play-btn">
+                        <button href="./"><img src="./images/icon_play_hover.svg" alt=""></button>
+                    </div>
+                </div>
+            </section>
+            <section class="price">
+                <div class="line-price-line">
+                    <hr>
+                    <div>
+                        <h2>Price</h2>
+                    </div>
+                    <hr>
+                </div>
+                <div class="price-item">
+                    <div class="standard">
+                        <div>
+                            <h3>Standard</h3>
+                        </div>
+                        <div class="money">
+                            500$
+                        </div>
+                    </div>
+                    <div class="premium">
+                        <div>
+                            <h3>Premium</h3>
+                        </div>
+                        <div class="money">
+                            700$
+                        </div>
+                    </div>
+                    <div class="gold">
+                        <div>
+                            <h3>Gold</h3>
+                        </div>
+                        <div class="money">
+                            1000$
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
