feat: added section Price

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -64,7 +64,7 @@
                         Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
                     </div>
                     <div class="wrapper-button-hire">
-                        <input type="button" value="Hire me">
+                        <button>Here me</button>
                     </div>
                 </div>
 
@@ -198,7 +198,17 @@
                             <h3>Standard</h3>
                         </div>
                         <div class="money">
-                            500$
+                            <span>500$</span>
+                        </div>
+                        <ul class="included-in-package">
+                            <li>One location</li>
+                            <li>120 photos in color</li>
+                            <li>12 photos in retouch</li>
+                            <li>Readiness 2-3 weeks</li>
+                            <li>Make up, visage</li>
+                        </ul>
+                        <div class="button-order-shooting">
+                            <button>Order shooting</button>
                         </div>
                     </div>
                     <div class="premium">
@@ -206,7 +216,17 @@
                             <h3>Premium</h3>
                         </div>
                         <div class="money">
-                            700$
+                            <span>700$</span>
+                        </div>
+                        <ul class="included-in-package">
+                            <li>One or two locations</li>
+                            <li>200 photos in color</li>
+                            <li>20 photos in retouch</li>
+                            <li>Readiness 1-2 weeks</li>
+                            <li>Make up, visage</li>
+                        </ul>
+                        <div class="button-order-shooting">
+                            <button>Order shooting</button>
                         </div>
                     </div>
                     <div class="gold">
@@ -214,7 +234,17 @@
                             <h3>Gold</h3>
                         </div>
                         <div class="money">
-                            1000$
+                            <span>1000$</span>
+                        </div>
+                        <ul class="included-in-package">
+                            <li>Three locations or more</li>
+                            <li>300 photos in color</li>
+                            <li>50 photos in retouch</li>
+                            <li>Readiness 1 week</li>
+                            <li>Make up, visage, hairstyle</li>
+                        </ul>
+                        <div class="button-order-shooting">
+                            <button>Order shooting</button>
                         </div>
                     </div>
                 </div>
