feat: added contacts section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Merriweather:wght@700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/logo.svg" type="image/svg">
 </head>
 
 <body>
@@ -246,6 +247,25 @@
                         <div class="button-order-shooting">
                             <button>Order shooting</button>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="wrapper-contacts">
+                <div class="contacts">
+                    <div class="contacts-title">
+                        <h3>Contact me</h3>
+                    </div>
+                    <div>
+                        <input class="contact-item" placeholder="E-mail" type="email" name="contacts">
+                    </div>
+                    <div>
+                        <input class="contact-item contact-phone" placeholder="Phone " type="tel " name="contacts ">
+                    </div>
+                    <div>
+                        <textarea class="contact-item contact-textarea " placeholder="Message " name="contacts " cols="30 " rows="10 "></textarea>
+                    </div>
+                    <div>
+                        <button class="contact-button">Send message</button>
                     </div>
                 </div>
             </section>
