--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,19 +28,19 @@
                         <nav>
                             <ul class="menu-header">
                                 <li class="menu-header-item">
-                                    <a href="./">Skills</a>
+                                    <a href="#skills">Skills</a>
                                 </li>
                                 <li class="menu-header-item">
-                                    <a href="./">Portfolio</a>
+                                    <a href="#portfolio">Portfolio</a>
                                 </li>
                                 <li class="menu-header-item">
-                                    <a href="./">Video</a>
+                                    <a href="#video">Video</a>
                                 </li>
                                 <li class="menu-header-item">
-                                    <a href="./">Price</a>
+                                    <a href="#price">Price</a>
                                 </li>
                                 <li class="menu-header-item">
-                                    <a href="./">Contacts</a>
+                                    <a href="#contacts">Contacts</a>
                                 </li>
                             </ul>
                         </nav>
@@ -71,6 +71,7 @@
 
             </section>
             <section class="skills">
+                <a name="skills"></a>
                 <div class="line-skill-line">
                     <hr>
                     <div>
@@ -128,6 +129,7 @@
                 </div>
             </section>
             <section class="portfolio">
+                <a name="portfolio"></a>
                 <div class="line-portfolio-line">
                     <hr>
                     <div>
@@ -171,6 +173,7 @@
                 </div>
             </section>
             <section class="video">
+                <a name="video"></a>
                 <div class="line-video-line">
                     <hr>
                     <div>
@@ -186,6 +189,7 @@
                 </div>
             </section>
             <section class="price">
+                <a name="price"></a>
                 <div class="line-price-line">
                     <hr>
                     <div>
@@ -251,9 +255,10 @@
                 </div>
             </section>
             <section class="wrapper-contacts">
+                <a name="contacts"></a>
                 <div class="contacts">
                     <div class="contacts-title">
-                        <h3>Contact me</h3>
+                        <h2>Contact me</h2>
                     </div>
                     <div>
                         <input class="contact-item" placeholder="E-mail" type="email" name="contacts">
@@ -270,7 +275,34 @@
                 </div>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="wrapper-footer">
+                <div class="footer-data">
+                    <div>©</div>
+                    <div>2022</div>
+                    <div><a href="https://github.com/AlenaZezyulchik">github</a></div>
+                </div>
+                <div>
+                    <a class="link-school" href="https://rs.school/js-stage0/">Rolling Scopes School</a>
+                </div>
+                <div>
+                    <ul class="social-list">
+                        <li>
+                            <a href="https://www.instagram.com"><img src="./images/inst-logo.svg" alt="instagram"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/"><img src="./images/fb-logo.svg" alt="facebook"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/"><img src="./images/tw-logo.svg" alt="twitter"></a>
+                        </li>
+                        <li>
+                            <a href="https://www.pinterest.com/"><img src="./images/pinterest-logo.svg" alt="pinterest"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
