feat: fix error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="code-example">
                         <h3>Code Example:</h3>
                         <pre><code>
-                            const getSum = (array) => {
+                            function getSum (array) {
                                 let sum = 0;
                                 for(let i = 0; i &lt; array.length; i++) {
                                     sum += array[i]
