feat: added section steps

--- a/travel/index.html
+++ b/travel/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,700;1,400;1,700&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -37,8 +37,6 @@
                     <button>Login</button>
                 </div>
             </div>
-
-
         </header>
 
 
@@ -59,6 +57,38 @@
                     </div>
                 </div>
 
+            </section>
+            <section class="steps">
+                <div class="steps_content">
+                    <h2>3 STEPS TO THE PERFECT TRIP</h2>
+                    <div class="steps_content_items">
+                        <div class=steps_content_item>
+                            <div class="steps_content_item_bike">
+                                <img class="bike" src="./images/bike.svg" alt="bike">
+                            </div>
+                            <div class="steps_content_text">
+                                Share us preferable dates
+                            </div>
+                        </div>
+                        <div class="steps_content_item">
+                            <div class="steps_content_item_calendar">
+                                <img class="calendar" src="./images/calendar.svg" alt="calendar">
+                            </div>
+                            <div class="steps_content_text">
+                                Share us preferable dates
+                            </div>
+                        </div>
+                        <div class="steps_content_item">
+                            <div class="steps_content_item_plain">
+                                <img class="plain" src="./images/plain.svg" alt="plain">
+                            </div>
+                            <div class="steps_content_text">
+                                We will give you recommendations
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </section>
 
         </main>
