--- a/travel/index.html
+++ b/travel/index.html
@@ -43,7 +43,7 @@
         <main>
             <section class="preview">
                 <div class="preview_content">
-                    <h1>Explore the beauty of the World!</h1>
+                    <h1>Explore the beauty of the World</h1>
                     <div class="preview_content_item">
                         Recieve personalized recommendations for countries, hotels, activities and more
                     </div>
@@ -87,6 +87,42 @@
                             </div>
                         </div>
 
+                    </div>
+                </div>
+            </section>
+            <section class="destinations">
+                <div class="destinations_content">
+                    <h2>POPULAR DESTINATIONS</h2>
+                    <div class="destinations_slider">
+                        <div class="destinations_slider_spain">
+                            <img src="./images/spain.jpg" alt="spain">
+                            <div class="destinations_slider_text">SPAIN</div>
+                        </div>
+                        <div class="destinations_slider_japan">
+                            <img src="./images/japan.jpg" alt="japan">
+                            <div class="destinations_slider_text">JAPAN</div>
+                        </div>
+                        <div class="destinations_slider_usa">
+                            <img src="./images/USA.jpg" alt="usa">
+                            <div class="destinations_slider_text">USA</div>
+                        </div>
+                    </div>
+                    <div class="destinations_circles">
+                        <div class="circle_1">
+
+                        </div>
+                        <div class="circle_2">
+
+                        </div>
+                        <div class="circle_3">
+
+                        </div>
+                    </div>
+                    <div class="destinations_button">
+                        <div>
+                            <img src="./images/arrow-right.svg" alt="arrow-right">
+                        </div>
+                        <div class="destinations_button_text">Find More</div>
                     </div>
                 </div>
             </section>
