feat: added section stories

--- a/travel/index.html
+++ b/travel/index.html
@@ -126,6 +126,68 @@
                     </div>
                 </div>
             </section>
+            <section class="stories">
+                <div class="stories_content">
+                    <h2>TRAVEL STORIES</h2>
+                </div>
+                <div class="stories_content_items">
+                    <div class="stories_content_item">
+                        <div class="stories_content_photo">
+                            <img src="./images/story_1.jpg" alt="story">
+                        </div>
+                        <div class="stories_description_block">
+                            <h3>10 Photos of Attractive Thailand</h3>
+                            <div class="stories_desctiption_text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit... Read More
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stories_content_item">
+                        <div class="stories_content_photo">
+                            <img src="./images/story_2.jpg" alt="story">
+                        </div>
+                        <div class="stories_description_block">
+                            <h3>Canyonlands National Park, Utah</h3>
+                            <div class="stories_desctiption_text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit... Read More
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stories_content_item">
+                        <div class="stories_content_photo">
+                            <img src="./images/story_3.jpg" alt="story">
+                        </div>
+                        <div class="stories_description_block">
+                            <h3>I left my heart in the Mountains!</h3>
+                            <div class="stories_desctiption_text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit... Read More
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stories_content_item">
+                        <div class="stories_content_photo">
+                            <img src="./images/story_4.jpg" alt="story">
+                        </div>
+                        <div class="stories_description_block">
+                            <h3>The Longest journey in my life!</h3>
+                            <div class="stories_desctiption_text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
+                                consectetur adipiscing elit... Read More
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stories_button">
+                        <button>See More</button>
+                    </div>
+                </div>
+            </section>
 
         </main>
     </div>
