--- a/travel/index.html
+++ b/travel/index.html
@@ -119,10 +119,7 @@
                         </div>
                     </div>
                     <div class="destinations_button">
-                        <div>
-                            <img src="./images/arrow-right.svg" alt="arrow-right">
-                        </div>
-                        <div class="destinations_button_text">Find More</div>
+                        <button><img src="./images/arrow-right.svg" alt="arrow">Find More</button>
                     </div>
                 </div>
             </section>
@@ -140,7 +137,7 @@
                             <div class="stories_desctiption_text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit... Read More
+                                consectetur adipiscing elit... <span>Read More</span>
                             </div>
                         </div>
                     </div>
@@ -153,7 +150,7 @@
                             <div class="stories_desctiption_text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit... Read More
+                                consectetur adipiscing elit... <span>Read More</span>
                             </div>
                         </div>
                     </div>
@@ -166,7 +163,7 @@
                             <div class="stories_desctiption_text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit... Read More
+                                consectetur adipiscing elit... <span>Read More</span>
                             </div>
                         </div>
                     </div>
@@ -179,12 +176,12 @@
                             <div class="stories_desctiption_text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit... Read More
+                                consectetur adipiscing elit... <span>Read More</span>
                             </div>
                         </div>
                     </div>
                     <div class="stories_button">
-                        <button>See More</button>
+                        <button><img src="./images/arrow-right.svg" alt="arrow">See More</button>
                     </div>
                 </div>
             </section>
