feat: added nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <body>
     <div class="wrapper">
         <header>
-            <p>CV#3</p>
+            <nav>
+                <ul class="navigation">
+                    <li><a href="#top1">About Myself</a></li>
+                    <li><a href="#top2">Skills and Proficiency</a></li>
+                    <li><a href="#top3">Code Example</a></li>
+                    <li><a href="#top4">Education</a></li>
+                    <li><a href="#top5">Language</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <div class="content">
@@ -28,7 +36,7 @@
                         </ul>
                     </div>
                     <div class="code-example">
-                        <h3>Code Example:</h3>
+                        <h3><a name="top3">Code Example:</a></h3>
                         <pre><code>
                             function getSum (array) {
                                 let sum = 0;
@@ -45,14 +53,14 @@
                 <div class="purple-block content-item">
                     <h2>Ziaziulchyk</h2>
                     <div>
-                        <h3>About Myself:</h3>
+                        <h3><a name="top1">About Myself:</a></h3>
                         <div class="about-myself">
                             <p>I graduated from the Belarusian State Economic University. For the last 10 years of my life I have been working in the trade. Now I am in a managerial position in one of the stores of a large retail chain. I don’t like my job.
                                 It does not bring pleasure, it takes a lot of strength and energy. I want to become a front-end developer at EPAM. My strengths are perseverance, perseverance, ability to multitask, self-confidence and a desire to go all
                                 the way. I believe these qualities will help me successfully complete my training and become part of the EPAM team. Programming languages: Java script, HTML, CSS. Version control systems: git. Development tools: VS code.</p>
                         </div>
                         <div class="skills">
-                            <h3>Skills and Proficiency:</h3>
+                            <h3><a name="top2">Skills and Proficiency:</a></h3>
                             <ul class="skills">
                                 <li>HTML5</li>
                                 <li>CSS</li>
@@ -69,12 +77,12 @@
                             <a class="link-my-project" href="https://alenazezyulchik.github.io/rsschool-cv/cv">My first project</a>
                         </div>
                         <div>
-                            <h3>Education:</h3>
+                            <h3><a name="top4">Education:</a></h3>
                             <p>Belarusian State Economic University (2010-2014). Faculty of Economics and Trade Management</p>
                         </div>
                         <div>
-                            <h3>Language:</h3>
-                            <p>A1+</p>
+                            <h3><a name="top5">Language:</a></h3>
+                            <p>English: A1+</p>
                         </div>
                     </div>
                 </div>
